--- a/themes/kiss/layouts/partials/nav.html
+++ b/themes/kiss/layouts/partials/nav.html
@@ -2,7 +2,8 @@
   <div class="container">
     <nav class="nav">
       <div class="nav-left">
-        <a class="nav-item" href="{{ .Site.BaseURL }}"><h1 class="title is-4">{{ .Site.Title }}</h1></a>
+        <a class="nav-item" href="{{ .Site.BaseURL }}"><h1 class="title is-4">{{ .Site.Title }}
+			  {{ if $.Params.category }} <i class="fa fa-angle-right" aria-hidden="true"></i> {{ $.Params.category }} {{ end }} </h1></a>
       </div>
       <div class="nav-right">
         <nav class="nav-item level is-mobile">
