--- a/themes/kiss/static/css/custom.css
+++ b/themes/kiss/static/css/custom.css
@@ -33,3 +33,16 @@
 a:hover {
 	text-decoration: none;
 }
+
+p img {
+    display: block;
+    margin: 0 auto;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    width: 90%; 
+}
+
+div iframe {
+	display: block;
+	padding-left: 5%;
+	padding-right: 5%;
+}
