--- a/themes/kiss/static/css/custom.css
+++ b/themes/kiss/static/css/custom.css
@@ -46,3 +46,10 @@ div iframe {
 	padding-left: 5%;
 	padding-right: 5%;
 }
+
+.content h4 {
+	color: #2077b2;
+	margin-top: 15px!important;
+	margin-bottom: 5px!important;
+	font-weight: 150%!important;
+}
