--- a/themes/kiss/static/css/custom.css
+++ b/themes/kiss/static/css/custom.css
@@ -38,7 +38,7 @@ p img {
     display: block;
     margin: 0 auto;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-    width: 90%; 
+    width: 90%;
 }
 
 div iframe {
@@ -52,4 +52,10 @@ div iframe {
 	margin-top: 15px!important;
 	margin-bottom: 5px!important;
 	font-weight: 150%!important;
+}
+
+.table thead th {
+  font-weight:bold;
+  color: white;
+  background-color: darkgray;
 }
