--- a/docs/css/custom.css
+++ b/docs/css/custom.css
@@ -59,3 +59,9 @@ div iframe {
   color: white;
   background-color: darkgray;
 }
+
+.withtip {
+  display: inline-block;
+	cursor: pointer;
+  color: purple;
+}
