--- a/themes/kiss/layouts/partials/footer.html
+++ b/themes/kiss/layouts/partials/footer.html
@@ -17,7 +17,7 @@ $('.withtip').each(function () {
 	{
 		html: true,
 		content: $('#' + $(this).data('tip')).html(),
-    trigger: 'click',
+    trigger: 'focus',
     container: 'body'
 	});
 });
