--- a/themes/kiss/layouts/partials/footer.html
+++ b/themes/kiss/layouts/partials/footer.html
@@ -12,14 +12,11 @@
 </body>
 <script>
 // Tooltips
-$('.withtip').each(function () {
-	$(this).popover(
-	{
-		html: true,
-		content: $('#' + $(this).data('tip')).html(),
-    trigger: 'focus',
-    container: 'body'
-	});
+$(document).ready(function(){
+    $(".toggle-detail").click(function(e){
+        e.preventDefault();
+        $('.'+$(this).attr('data-detail')).addClass('text-info').toggle();
+    });
 });
 
 </script>
