--- a/themes/kiss/layouts/partials/footer.html
+++ b/themes/kiss/layouts/partials/footer.html
@@ -15,7 +15,7 @@
 $(document).ready(function(){
     $(".toggle-detail").click(function(e){
         e.preventDefault();
-        $('.'+$(this).attr('data-detail')).addClass('text-info').toggle();
+        $('.'+$(this).attr('data-detail')).addClass('detail').toggle();
     });
 });
 
